samples/_failures_safe/1761042915_c9de4c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_82e2d944.c: In function ‘main’:
./samples/SAFE/__tmp_82e2d944.c:173:5: error: expected expression at end of input
  173 |     int col =
      |     ^~~
./samples/SAFE/__tmp_82e2d944.c:173:5: error: expected declaration or statement at end of input
